# notification_system

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/: notifications_router.py
app/core/: config.py  logger_config.py
app/schemas/: enum.py  notification_schemas.py
app/services/: email_service.py  notification_service.py  sms_service.py  telegram_service.py
app/utils/: retry.py
